NXT-2028: Enable FE to Open shared components
* Add new method to `Space` interface and method implementation to `LocalWorkspace`
* Adapt entities being built
* Adapt response being sent after adding a workflow annotation
* Make `SimpleRepository.disposeHistory()` thread-safe

NXT-2028 (BE: Opening, editing, saving component projects from the Space Explorer)